2022-11-07T08:08:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3408581818 # 600
* notice: last 14d: unq all: 3 5675
* notice: prev accum: outdated-unq outdated-all / unq all: 1190 81612 / 1215 87325
* notice: next accum: outdated-unq outdated-all / unq all: 1190 81612 / 1216 87287
* notice: prev exec diff / last date diff / accum: unq all: +1 +143 -0 -181 / +1 +141 -0 -0 / 1 141
* notice: removed / changed dates: [] / [2022-10-24 2022-11-06 2022-11-07]

2022-11-07T00:29:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3406679681 # 599
* notice: last 14d: unq all: 3 5713
* notice: prev accum: outdated-unq outdated-all / unq all: 1188 81205 / 1215 86846
* notice: next accum: outdated-unq outdated-all / unq all: 1190 81612 / 1215 87325
* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -11 / +1 +410 -0 -0 / 1 410
* notice: removed / changed dates: [2022-10-23] / [2022-10-24 2022-11-06]

2022-11-06T16:06:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3405050543 # 598
* notice: last 14d: unq all: 3 5641
* notice: prev accum: outdated-unq outdated-all / unq all: 1188 81205 / 1215 86870
* notice: next accum: outdated-unq outdated-all / unq all: 1188 81205 / 1215 86846
* notice: prev exec diff / last date diff / accum: unq all: +0 +122 -0 -146 / +1 +262 -0 -0 / 1 262
* notice: removed / changed dates: [] / [2022-10-23 2022-11-06]

2022-11-06T08:07:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3403522888 # 597
* notice: last 14d: unq all: 3 5665
* notice: prev accum: outdated-unq outdated-all / unq all: 1188 81205 / 1214 86909
* notice: next accum: outdated-unq outdated-all / unq all: 1188 81205 / 1215 86870
* notice: prev exec diff / last date diff / accum: unq all: +1 +142 -0 -181 / +1 +140 -0 -0 / 1 140