@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-07T08:08:43Z",
-  "count" : 206,
-  "count_minmax" : [ 128, 398 ],
-  "count_decinc" : [ -192, +398 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2022-11-07T16:06:37Z",
+  "count" : 63,
+  "count_minmax" : [ 63, 398 ],
+  "count_decinc" : [ -335, +398 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
