@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-11-07T08:08:43Z",
+  "timestamp" : "2022-11-07T16:06:37Z",
   "count_outdated" : 81612,
   "uniques_outdated" : 1190,
-  "count" : 87287,
-  "uniques" : 1216,
+  "count" : 87263,
+  "uniques" : 1215,
   "clones" : [
     {
       "timestamp": "2022-10-24T00:00:00Z",
-      "count": 206,
-      "count_minmax": [ 128, 398 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 63,
+      "count_minmax": [ 63, 398 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-10-25T00:00:00Z",
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-11-07T00:00:00Z",
-      "count": 141,
-      "count_minmax": [ 141, 141 ],
+      "count": 260,
+      "count_minmax": [ 141, 260 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
