@@ -1,3 +1,11 @@
+2022-11-07T16:06:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3411994819 # 601
+* notice: last 14d: unq all: 3 5651
+* notice: prev accum: outdated-unq outdated-all / unq all: 1190 81612 / 1216 87287
+* notice: next accum: outdated-unq outdated-all / unq all: 1190 81612 / 1215 87263
+* notice: prev exec diff / last date diff / accum: unq all: +0 +119 -1 -143 / +1 +260 -0 -0 / 1 260
+* notice: removed / changed dates: [] / [2022-10-24 2022-11-07]
+
 2022-11-07T08:08:43Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3408581818 # 600
 * notice: last 14d: unq all: 3 5675
